Thu May 13 09:45:27 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub: link with ffs.obj.

Thu May 13 07:37:49 2010  Tanaka Akira  <akr@fsij.org>

	* ext/sdbm/_sdbm.c: include unistd.h before sdbm.h for off_t.
	  fix compilation problem on FreeBSD 6.4.

Wed May 12 23:48:37 2010  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_quad_pack): deprecated.
	  (rb_quad_unpack): ditto.

Wed May 12 22:22:05 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_big_abs_find_minbit): use ffs().

	* configure.in: check ffs().

	* missing/ffs.c: new file.

	* include/ruby/missing.h (ffs): declared.

Wed May 12 16:43:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): fixed broken output including nuls.

Wed May 12 16:25:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): exponent needs 2 digits.

Wed May 12 16:02:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): fill lower zeros.

Wed May 12 15:45:36 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rdoc/generator/ri.rb (generate): should load existing cache
	  before generating it.

Wed May 12 15:04:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/lib/bigdecimal/math.rb (BigMath#log): improved
	  precision and performance. [ruby-dev:41295]

Wed May 12 11:39:10 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: test all IPPROTO_* constants for recent Win32
	  SDK.

Wed May 12 10:57:04 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): make minimum string representation.
	  [ruby-core:30145]

Wed May 12 09:21:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_initialize_m): fix wrong index for the lang
	  option's value 'N'. reported by Masaya TARUI via IRC.

Tue May 11 23:07:22 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test IPPROTO_IP and IPPROTO_IPV6 constants.

	* ext/socket/mkconstants.rb: define macros for enum.

	  [ruby-dev:38849]
