@@ -1,3 +1,9 @@
+Thu May 13 12:53:13 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* io.c (swallow): support text mode and UTF-16/32 as internal encoding.
+
+	* io.c (io_shift_cbuf): read and throw it away when str is NULL.
+
 Thu May 13 09:45:27 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/Makefile.sub: link with ffs.obj.
